Fix: Include settings.html and settings.js in build

--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
       "index.html",
       "styles.css",
       "preload.js",
+      "settings.html",
+      "settings.js",
       "Logo.png"
     ]
   }
